Fixed datatable stylings, rounded corner, dropdown overflow issues

--- a/public/stylesheets/xaas.css
+++ b/public/stylesheets/xaas.css
@@ -1,16 +1,15 @@
 /* Text */
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Helvetica', sans-serif;
     font-size: 1.05rem;
     line-height: 1.9rem;
 }
 h1, h2, h3, h4, h5, h6, .card-title{
-    font-family: 'Roboto Slab', "Helvetica", sans-serif;
-    letter-spacing: 0.75px;
+    font-family: 'Lato', "Helvetica", sans-serif;
+    font-weight: 900;
 }
 .h1, .h2, .h3, .h4, .h5, .h6,
 h1, h2, h3, h4, h5, h6{
-    font-weight: normal;
     margin: 0px;
     margin-bottom: 10px;
 }
